--- a/CycleRoutes/CycleRoutes.Web/Components/App.razor
+++ b/CycleRoutes/CycleRoutes.Web/Components/App.razor
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="_content/CycleRoutes.Shared/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="_content/CycleRoutes.Shared/app.css" />
     <link rel="stylesheet" href="CycleRoutes.Web.styles.css" />
-    <link rel="icon" type="image/png" href="_content/CycleRoutes.Shared/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <HeadOutlet @rendermode="InteractiveAuto" />
 </head>
 
